<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <!-- header -->
    <LinearLayout
        android:id="@+id/drawerHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_background"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_foreground" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:lineSpacingExtra="-4sp"
            android:text="@string/header"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:translationX="-16dp"
            android:translationY="1dp" />

    </LinearLayout>

    <!-- main section -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/drawerFooterIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drawerHeader">

        <TextView
            android:id="@+id/drawerAboutTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/about_text"
            android:textColor="#000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/drawerHeader"
            android:autoLink="web|email"
            android:textColorLink="@color/primary_blue" />

    </ScrollView>

    <!-- footer icons -->
    <LinearLayout
        android:id="@+id/drawerFooterIcons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/openExternallyButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/open_in_new_icon"
            android:contentDescription="@string/button_browser_description"
            app:tint="@color/primary_blue" />

        <ImageButton
            android:id="@+id/refreshButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/refresh_icon"
            android:contentDescription="@string/button_refresh_description"
            app:tint="@color/primary_blue" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>